--- a/css/style.css
+++ b/css/style.css
@@ -754,11 +754,98 @@ a {
 }
 
 .toStore {
-  height: 60vh;
+  height: 80vh;
   width: 99vw;
   display: flex;
   flex-direction: column;
   background-color: #f2f2f2;
+}
+
+.all p {
+  width: 45%;
+  font-size: 4rem;
+  margin-left: 5%;
+  border-bottom: 2px solid #373737;
+  font-weight: 700;
+}
+@media (max-width: 533px) {
+  .all p {
+    font-size: 2rem;
+  }
+}
+
+.container2 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+.container2 .mainP {
+  width: 90%;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+.container2 .mainP .contV {
+  width: 50%;
+  height: 700px;
+}
+.container2 .mainP .contV .velas {
+  height: 100%;
+  width: 100%;
+  background-image: url(/assets/velas/velaAntigua.jpg);
+  background-size: 80%;
+  background-repeat: no-repeat;
+  background-position: 10% 81%;
+}
+.container2 .mainP .contV .velas h2 {
+  font-size: 3.5rem;
+  margin-left: 4%;
+  position: absolute;
+  top: 325%;
+}
+.container2 .cont2 {
+  width: 50%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.container2 .cont2 .jarrones {
+  height: 50%;
+  width: 100%;
+  margin-top: 5.3%;
+}
+.container2 .cont2 .jarrones .jarron {
+  width: 100%;
+  height: 100%;
+  background-image: url(/assets/jarrones/jarronNegro.jpg);
+  background-repeat: no-repeat;
+}
+.container2 .cont2 .jarrones .jarron h2 {
+  position: absolute;
+  top: 297%;
+  font-size: 3rem;
+  left: 51%;
+}
+.container2 .cont2 .cuadernos {
+  height: 50%;
+  width: 100%;
+}
+.container2 .cont2 .cuadernos .cuaderno {
+  width: 100%;
+  height: 85.2%;
+  background-image: url(/assets/libretas/libretaClasica.jpg);
+  background-repeat: no-repeat;
+}
+.container2 .cont2 .cuadernos .cuaderno h2 {
+  position: absolute;
+  top: 308%;
+  left: 51%;
+  font-size: 3rem;
 }
 
 /*# sourceMappingURL=style.css.map */
