--- a/sass/style.scss
+++ b/sass/style.scss
@@ -719,9 +719,94 @@ a {
   }
 }
 .toStore {
-  height: 60vh;
+  height: 80vh;
   width: 99vw;
   display: flex;
   flex-direction: column;
   background-color: #f2f2f2;
+}
+.all p {
+  width: 45%;
+  font-size: 4rem;
+  margin-left: 5%;
+  border-bottom: 2px solid #373737;
+  font-weight: 700;
+  @media (max-width: 533px) {
+    font-size: 2rem;
+  }
+}
+.container2 {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  .mainP {
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+
+    .contV {
+      width: 50%;
+      height: 700px;
+
+      .velas {
+        height: 100%;
+        width: 100%;
+        background-image: url(/assets/velas/velaAntigua.jpg);
+        background-size: 80%;
+        background-repeat: no-repeat;
+        background-position: 10% 81%;
+        h2 {
+          font-size: 3.5rem;
+          margin-left: 4%;
+          position: absolute;
+          top: 325%;
+        }
+      }
+    }
+  }
+  .cont2 {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    .jarrones {
+      height: 50%;
+      width: 100%;
+      margin-top: 5.3%;
+      .jarron {
+        width: 100%;
+        height: 100%;
+        background-image: url(/assets/jarrones/jarronNegro.jpg);
+        background-repeat: no-repeat;
+        h2 {
+          position: absolute;
+          top: 297%;
+          font-size: 3rem;
+          left: 51%;
+        }
+      }
+    }
+    .cuadernos {
+      height: 50%;
+      width: 100%;
+      .cuaderno {
+        width: 100%;
+        height: 85.2%;
+        background-image: url(/assets/libretas/libretaClasica.jpg);
+        background-repeat: no-repeat;
+        h2 {
+          position: absolute;
+          top: 308%;
+          left: 51%;
+          font-size: 3rem;
+        }
+      }
+    }
+  }
 }
