--- a/sass/style.scss
+++ b/sass/style.scss
@@ -272,7 +272,7 @@ nav {
 }
 .new {
   width: 99vw;
-  height: 60vh;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   background-color: #f2f2f2;
@@ -798,7 +798,7 @@ a {
       .cuaderno {
         width: 100%;
         height: 85.2%;
-        background-image: url(/assets/libretas/libretaClasica.jpg);
+        background-image: url(/assets/libretas/libretaOficina.webp);
         background-repeat: no-repeat;
         h2 {
           position: absolute;
