--- a/sass/style.scss
+++ b/sass/style.scss
@@ -765,7 +765,7 @@ a {
           font-size: 3.5rem;
           margin-left: 4%;
           position: absolute;
-          top: 325%;
+          top: 336%;
         }
       }
     }
@@ -779,6 +779,7 @@ a {
       height: 50%;
       width: 100%;
       margin-top: 5.3%;
+      margin-left: 5%;
       .jarron {
         width: 100%;
         height: 100%;
@@ -786,9 +787,9 @@ a {
         background-repeat: no-repeat;
         h2 {
           position: absolute;
-          top: 297%;
+          top: 307%;
           font-size: 3rem;
-          left: 51%;
+          left: 54%;
         }
       }
     }
@@ -800,10 +801,13 @@ a {
         height: 85.2%;
         background-image: url(/assets/libretas/libretaOficina.webp);
         background-repeat: no-repeat;
+        background-position: 10% 81%;
+
         h2 {
           position: absolute;
-          top: 308%;
-          left: 51%;
+          top: 318%;
+          left: 54%;
+
           font-size: 3rem;
         }
       }
