--- a/css/style.css
+++ b/css/style.css
@@ -801,12 +801,12 @@ a {
   background-size: 80%;
   background-repeat: no-repeat;
   background-position: 10% 81%;
+  display: flex;
+  justify-content: flex-start;
 }
 .container2 .mainP .contV .velas h2 {
   font-size: 3.5rem;
   margin-left: 4%;
-  position: absolute;
-  top: 336%;
 }
 .container2 .cont2 {
   width: 50%;
@@ -825,12 +825,12 @@ a {
   height: 100%;
   background-image: url(/assets/jarrones/jarronNegro.jpg);
   background-repeat: no-repeat;
+  display: flex;
+  justify-content: flex-start;
 }
 .container2 .cont2 .jarrones .jarron h2 {
-  position: absolute;
-  top: 307%;
   font-size: 3rem;
-  left: 54%;
+  margin-left: 1%;
 }
 .container2 .cont2 .cuadernos {
   height: 50%;
@@ -842,12 +842,12 @@ a {
   background-image: url(/assets/libretas/libretaOficina.webp);
   background-repeat: no-repeat;
   background-position: 10% 81%;
+  display: flex;
+  justify-content: flex-start;
 }
 .container2 .cont2 .cuadernos .cuaderno h2 {
-  position: absolute;
-  top: 318%;
-  left: 54%;
   font-size: 3rem;
+  margin-left: 6%;
 }
 
 /*# sourceMappingURL=style.css.map */
