--- a/sass/style.scss
+++ b/sass/style.scss
@@ -775,6 +775,7 @@ a {
     height: 100%;
     display: flex;
     flex-direction: column;
+    margin-bottom: 40%;
     .jarrones {
       height: 50%;
       width: 100%;
